@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon  id="metadata.filmaffinity.com"
 	name="FilmAffinity"
-	version="1.5.7"
+	version="1.5.8"
 	provider-name="hectorZiN|MaDDoGo|agjacome|pancheto">
 	<requires>
 	    <import addon="xbmc.metadata" version="1.0.0"/>
